todo-app.css
@import url('https://fonts.googleapis.com/css?family=Orbitron');

body {
    background-color: black;
    color: #00E8FF;
    font-family: 'Orbitron', sans-serif;
    font-size: 40px;
    text-align: center;
}

h1  {
    margin-bottom: 10px;
}

h2  {
    color: grey;
    font-family: monospace;
    font-size: 20px;
}

#inputBox  {
    background-color: black;
    color: #00E8FF;
    font-family: monospace;
    font-size: 30px;
    border: 2px solid; 
    text-align: center;
}

ul {
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin-top: 30px;
    padding: 0;
}

li {
    cursor: pointer;
    background-color: black;
    list-style: none;
}

#delete-list-btn {
    background-color: black;
    color: grey;
    font-family: monospace;
    font-size: 18px;
    text-align: center;
    cursor: pointer;
}

/* when you can, come back and center these <li> buttons vertically 
(NOTE that below commented code did not work) */
.deleteItemBtn  {
    background-color: black;
    color: grey;
    font-family: monospace;
    cursor: pointer;
    margin-left: 30px;
    /* margin-bottom: 15px; */
    /* padding-bottom: 10px; */
    /* text-align: center; */
    /* margin-top: 0px; */
    /* object-fit: contain; */
}

